<resources>
    <string name="app_name">Agri Bot</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="data">Data</string>
    <string name="mqtt_message">MQTT message</string>
    <string name="start">start</string>
    <string name="pause">Pause</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="row_length_m">row length (m)</string>
    <string name="gap_of_seeds_m">gap of seeds (m)</string>
    <string name="number_of_rows">number of rows</string>
    <string name="gap_of_rows_m">gap of rows (m)</string>
    <string name="set">set</string>
    <string name="enter_product_id">Enter Product ID</string>
    <string name="user_login">User Login</string>
    <string name="login">Login</string>
    <string name="product_id_is_in_the_product_details">product id is in the product details</string>
    <string name="gap_between_two_seeds_cm">Gap between two seeds (cm)</string>
    <string name="gap_between_two_rows">Gap between two rows</string>
    <string name="gap_between_two_rows_cm">gap between two rows (cm)</string>
    <string name="row_length_cm">Row Length (cm)</string>
    <string name="device_info">Device Info</string>
    <string name="device_info2">DEVICE INFO</string>
    <string name="version">Version</string>
    <string name="chipset">Chipset</string>
    <string name="product_id">Product ID</string>
    <string name="owner">Owner</string>
    <string name="imei">IMEI</string>
    <string name="close">Close</string>
    <string name="versionData">AgriBot version 1.0.0</string>
    <string name="notConnect">Not Connected</string>
    <string name="connectBroker">Connected to broker</string>
    <string name="connect">CONNECT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
