<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="368dp"
        android:layout_height="190dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.333">

        <Button
            android:id="@+id/button4"
            android:layout_width="97dp"
            android:layout_height="54dp"
            android:background="@drawable/custom_control_btn"
            android:onClick="publishResetSignalToBroker"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textColorLink="#1A39EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.147" />

        <Button
            android:id="@+id/button3"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:background="@drawable/custom_control_btn"
            android:clickable="true"
            android:onClick="publishStopSignalToBroker"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:textColorLink="#1A39EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153" />

        <Button
            android:id="@+id/button"
            android:layout_width="91dp"
            android:layout_height="53dp"
            android:background="@drawable/custom_control_btn"
            android:clickable="true"
            android:onClick="publishStartSignalToBroker"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textColorLink="#1A39EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153" />

        <Button
            android:id="@+id/button2"
            android:layout_width="279dp"
            android:layout_height="78dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_control_btn"
            android:clickable="true"
            android:onClick="publishPauseSignalToBroker"
            android:text="@string/pause"
            android:textColor="@android:color/white"
            android:textColorLink="#1A39EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>